--- a/01 Cesar/index.html
+++ b/01 Cesar/index.html
@@ -4,19 +4,32 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Ejemplo Cesar</title>
     <link rel="stylesheet" href="css/style.css">
-    <title>Document</title>
 </head>
 <body>
-    Este es un ejemplo para poder cifrar un texto con el algoritmo de cesar
+    Este es un ejemplo para poder cifrar un texto con el algoritmo de césar.
+    P.D. tengo sueñito
+
+    Tarea:
+
+    Voy a querer que no sea constante el desplazamiento y que lo pueda ingresar
+    adentro de un campo de texto, deberan de aplicar la operacion modulo
+    si me paso de 27 letras
+
+    desp  mod 27 
+
+    porque van a agregar la ñ
+    <input type="number" id="desplazamiento">
     <br>
-    <textarea name="" id="cadena" cols="30" rows="10"></textarea>
+    <textarea id="cadena" cols="30" rows="10"></textarea>
     <br>
-    <p><input type="button" value="Cifrar" onclick="crifar()"></p>
-    <input type="button" value="Cifrar" onclick="descrifar()"></p>
-    <div id="resultado">
+    <p><input type="button" value="Cifrar" onclick="cifrar()" >
+        <input type="button" value="Descifrar" onclick="descifrar()" ></p>
+    <div id="resultado" >
 
     </div>
-    <script src="js/cesar.js"></script>
+
+    <script src="js/cesar.js" ></script>
 </body>
 </html>
