--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="./Tarea1/index.html"></a>
+    <a href="./Tarea1/index.html">Tarea1</a>
 </body>
 </html>
